--- a/calc.html
+++ b/calc.html
@@ -54,6 +54,11 @@
             }
             document.getElementById("console").innerHTML = min;
         }
+        function reset() {
+            document.getElementById("console").innerHTML = "";
+            document.getElementById("numberList").innerHTML = "";
+            clearDisplay();
+        }
     </script>
    
 
@@ -67,7 +72,7 @@
             <input type='text' id='number' />
             <input type='button' value='Add To List' onclick="addToList()"  />
             <input type='button' value='Clear Display' onclick='clearDisplay()' />
-            <input type='button' value='Reset Calculator' onclick=""   />
+            <input type='button' value='Reset Calculator' onclick="reset()"   />
 
             <br/>
             <input type='button' value='Sum'  onclick="addNumbers()" />
